--- a/LitigationSoftware/LSWebApp/packages.config
+++ b/LitigationSoftware/LSWebApp/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
-  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery" version="1.5.2" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.9.0" targetFramework="net461" />
+  <package id="jQuery.UI.Core" version="1.8.9" targetFramework="net461" />
+  <package id="jQuery.UI.Widgets.Datepicker" version="1.8.9" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
@@ -16,7 +19,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
