ITReturn Module saving functionality

--- a/LitigationSoftware/LSApi/LSApi.csproj
+++ b/LitigationSoftware/LSApi/LSApi.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\LoginAPIController.cs" />
     <Compile Include="Controllers\MasterAPIController.cs" />
+    <Compile Include="Controllers\TaxReturnAPIController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
