--- a/LitigationSoftware/LS.BL.Interface/LS.BL.Interface.csproj
+++ b/LitigationSoftware/LS.BL.Interface/LS.BL.Interface.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IITReturnDetailsBL.cs" />
     <Compile Include="IMaster.cs" />
     <Compile Include="ISignIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
