--- a/LitigationSoftware/LS.DAL.Library/LS.DAL.Library.csproj
+++ b/LitigationSoftware/LS.DAL.Library/LS.DAL.Library.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccessBase.cs" />
+    <Compile Include="ITReturnDetailsDataAccess.cs" />
     <Compile Include="MasterDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignInDataAccess.cs" />
