--- a/LitigationSoftware/LS.Modules/LS.Modules.csproj
+++ b/LitigationSoftware/LS.Modules/LS.Modules.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignInModule.cs" />
+    <Compile Include="TaxIntegrationModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
