--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -171,6 +171,7 @@
     </Compile>
     <Compile Include="Models\CompanyList.cs" />
     <Compile Include="Models\ITReturnDetailsModel.cs" />
+    <Compile Include="Models\LitigationDDModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -221,11 +222,14 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\plus.png" />
+    <Content Include="images\save.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\customDD.js" />
     <Content Include="Scripts\DatePickerReady.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -264,6 +268,7 @@
     <Content Include="Views\Login\LoginFailure.cshtml" />
     <Content Include="Views\TaxReturn\GetITReturnDetails.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnResponse.cshtml" />
+    <Content Include="Views\Shared\_LitigationDD.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
