--- a/LitigationSoftware/LS.Models/LS.Models.csproj
+++ b/LitigationSoftware/LS.Models/LS.Models.csproj
@@ -44,8 +44,11 @@
     <Compile Include="Company.cs" />
     <Compile Include="ErrorLog.cs" />
     <Compile Include="FYAY.cs" />
+    <Compile Include="ITHeadMaster.cs" />
     <Compile Include="ITReturnDetails.cs" />
+    <Compile Include="ITReturnDetailsExtension.cs" />
     <Compile Include="ITSection.cs" />
+    <Compile Include="ITSubHeadMaster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="UserLogin.cs" />
