CHANGES TO HANDLE EXTENSION TABLE

--- a/LitigationSoftware/LS.Models/LS.Models.csproj
+++ b/LitigationSoftware/LS.Models/LS.Models.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ErrorLog.cs" />
     <Compile Include="FYAY.cs" />
     <Compile Include="ITHeadMaster.cs" />
+    <Compile Include="ITReturnComplexAPIModel.cs" />
     <Compile Include="ITReturnDetails.cs" />
     <Compile Include="ITReturnDetailsExtension.cs" />
     <Compile Include="ITSection.cs" />
