--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -171,6 +171,7 @@
     </Compile>
     <Compile Include="Models\CompanyList.cs" />
     <Compile Include="Models\ITReturnDetailsModel.cs" />
+    <Compile Include="Models\ITReturnDetailsExtensionModel.cs" />
     <Compile Include="Models\LitigationDDModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -245,6 +246,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\manageSubHead.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -271,6 +273,7 @@
     <Content Include="Views\TaxReturn\GetITReturnDetails.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnResponse.cshtml" />
     <Content Include="Views\Shared\_LitigationDD.cshtml" />
+    <Content Include="Views\TaxReturn\ITSubHeadDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
