--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Infrastructure\MenuItem.cs" />
     <Compile Include="Models\CompanyList.cs" />
     <Compile Include="Models\CompanyModel.cs" />
+    <Compile Include="Models\ITHeadDocumentsUploaderModel.cs" />
     <Compile Include="Models\ITReturnComplexModel.cs" />
     <Compile Include="Models\ComplianceDocumentListModel.cs" />
     <Compile Include="Models\ComplianceListModel.cs" />
@@ -287,6 +288,7 @@
     <Content Include="Views\TaxReturn\ComplianceList.cshtml" />
     <Content Include="Views\TaxReturn\ExistingSectionWiseDetails.cshtml" />
     <Content Include="Views\Shared\_LayoutDynemicMenu.cshtml" />
+    <Content Include="Views\Shared\_ITHeadDocumentsUploader.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
