--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -237,8 +237,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\close.png" />
     <Content Include="images\plus.png" />
     <Content Include="images\save.png" />
+    <Content Include="images\upload.png" />
+    <Content Include="images\view.png" />
     <Content Include="Menu.xml" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
