Modified the code to get the menu working

--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Infrastructure\MenuItem.cs" />
     <Compile Include="Infrastructure\Utilities.cs" />
     <Compile Include="Models\CompanyList.cs" />
+    <Compile Include="Models\CompanyDashboardModel.cs" />
+    <Compile Include="Models\DashboardModel.cs" />
     <Compile Include="Models\CompanyModel.cs" />
     <Compile Include="Models\ITHeadDocumentsUploaderModel.cs" />
     <Compile Include="Models\ITReturnComplexModel.cs" />
@@ -239,7 +241,9 @@
     <Content Include="images\save.png" />
     <Content Include="images\upload.png" />
     <Content Include="images\view.png" />
-    <Content Include="Menu.xml" />
+    <Content Include="Menu.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -295,6 +299,8 @@
     <Content Include="Views\TaxReturn\ITReturnDocumentList.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnDocuments.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnDetailsListItem.cshtml" />
+    <Content Include="Views\TaxReturn\CreateCompany.cshtml" />
+    <Content Include="Views\TaxReturn\CompanyDashboard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
