--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\ITReturnDocumentListModel.cs" />
     <Compile Include="Models\ITReturnDocumentsModel.cs" />
     <Compile Include="Models\LitigationDDModel.cs" />
+    <Compile Include="Models\StandardDataModel.cs" />
     <Compile Include="Models\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -295,6 +296,7 @@
     <Content Include="Views\TaxReturn\ITReturnDocumentList.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnDocuments.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnDetailsListItem.cshtml" />
+    <Content Include="Views\TaxReturn\GetStandardData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
