--- a/LitigationSoftware/LS.Models/LS.Models.csproj
+++ b/LitigationSoftware/LS.Models/LS.Models.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ITSection.cs" />
     <Compile Include="ITSectionCategory.cs" />
     <Compile Include="ITSubHeadMaster.cs" />
+    <Compile Include="LAndSComments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="UserLogin.cs" />
