--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Infrastructure\Utilities.cs" />
     <Compile Include="Models\BusinessLossAnalysisModel.cs" />
     <Compile Include="Models\FlowChartModel.cs" />
+    <Compile Include="Models\ITReturnDetailsDataModel.cs" />
     <Compile Include="Models\ITReturnDetailsHeaderModel.cs" />
     <Compile Include="Models\LitigationAndSimulationModel.cs" />
     <Compile Include="Models\MatCreditStatusModel.cs" />
@@ -319,6 +320,7 @@
     <Content Include="Views\TaxReturn\LitigationAndSimulationListItem.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnDetails.cshtml" />
     <Content Include="Views\TaxReturn\ITReturnDetailsData.cshtml" />
+    <Content Include="Views\TaxReturn\ITHeadDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
