--- a/LitigationSoftware/LS.Models/LS.Models.csproj
+++ b/LitigationSoftware/LS.Models/LS.Models.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
+    <Compile Include="BusinessLossDetails.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="ComplianceDocuments.cs" />
     <Compile Include="ComplianceMaster.cs" />
