Added code to implement popup for sub head data entry

--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Infrastructure\MenuItem.cs" />
     <Compile Include="Infrastructure\Utilities.cs" />
     <Compile Include="Models\BusinessLossAnalysisModel.cs" />
+    <Compile Include="Models\ITReturnExtensionListModel.cs" />
     <Compile Include="Models\MATCreditDetailsDataModel.cs" />
     <Compile Include="Models\MATCreditDetailsHeaderModel.cs" />
     <Compile Include="Models\FlowChartModel.cs" />
@@ -334,6 +335,7 @@
     <Content Include="Views\TaxReturn\BusinessLossDetailsData.cshtml" />
     <Content Include="Views\TaxReturn\MATCreditDetails.cshtml" />
     <Content Include="Views\TaxReturn\MATCreditDetailsData.cshtml" />
+    <Content Include="Views\Shared\_ITReturnExtensionList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
