--- a/LitigationSoftware/LSApi/LSApi.csproj
+++ b/LitigationSoftware/LSApi/LSApi.csproj
@@ -46,6 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="LS.BL.Interface">
       <HintPath>..\LS.BL.Interface\bin\Debug\LS.BL.Interface.dll</HintPath>
     </Reference>
@@ -305,7 +308,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49228</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
