--- a/LitigationSoftware/LSApi/Web.config
+++ b/LitigationSoftware/LSApi/Web.config
@@ -9,7 +9,7 @@
   </configSections>
   <log4net>
     <appender name="TestAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="D:\log\MyTestAppender.log" />
+      <file value="D:\log\Litigation.log" />
       <encoding value="utf-8" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
