--- a/LitigationSoftware/LSApi/Web.config
+++ b/LitigationSoftware/LSApi/Web.config
@@ -7,9 +7,10 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
   </configSections>
+
   <log4net>
     <appender name="TestAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="D:\log\Litigation.log" />
+      <file value="E:\log\Litigation.log" />
       <encoding value="utf-8" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
@@ -22,7 +23,7 @@
       </layout>
     </appender>
     <root>
-      <level value="All" />
+      <level value="Error" />
       <!-- If the following line is not included the log file 
       will not be created even if log4net is configured with this file. -->
       <appender-ref ref="TestAppender" />
