BusinessLoss Analysis UI related changes in InputSheet

--- a/LitigationSoftware/LSApi/Web.config
+++ b/LitigationSoftware/LSApi/Web.config
@@ -10,7 +10,7 @@
 
   <log4net>
     <appender name="TestAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="E:\log\Litigation.log" />
+      <file value="D:\log\Litigation.log" />
       <encoding value="utf-8" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
@@ -36,8 +36,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="myConnectionString" connectionString="Data Source=DESKTOP-CVEJBH3\MS2014;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <!--<add name="myConnectionString" connectionString="Data Source=localhost;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="myConnectionString" connectionString="Data Source=DESKTOP-CVEJBH3\MS2014;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="myConnectionString" connectionString="Data Source=localhost;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -55,7 +55,7 @@
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
-      <remove name="ApplicationInsightsWebTracking" />
+      <remove name=" ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
