Added new fields to ITReturnDetails TaxProvisions, TaxAssets, ContingentLiabilities, ImplementorId Added new entity and related code for ImplementorMaster

--- a/LitigationSoftware/LS.Models/LS.Models.csproj
+++ b/LitigationSoftware/LS.Models/LS.Models.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
     <Compile Include="DocumentCategoryMaster.cs" />
+    <Compile Include="Implementor.cs" />
     <Compile Include="RefundDetails.cs" />
     <Compile Include="SubDocumentCategoryMaster.cs" />
     <Compile Include="MATCreditDetails.cs" />
