Added UI for competitor tax rate screens

--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Infrastructure\MenuItem.cs" />
     <Compile Include="Infrastructure\Utilities.cs" />
     <Compile Include="Models\BusinessLossAnalysisModel.cs" />
+    <Compile Include="Models\CompetitorTaxRatesHeaderModel.cs" />
+    <Compile Include="Models\CompetitorTaxRatesDataModel.cs" />
     <Compile Include="Models\RefundDetailsListModel.cs" />
     <Compile Include="Models\ITReturnExtensionListModel.cs" />
     <Compile Include="Models\MATCreditDetailsDataModel.cs" />
@@ -339,6 +341,7 @@
     <Content Include="Views\TaxReturn\MATCreditDetailsData.cshtml" />
     <Content Include="Views\Shared\_ITReturnExtensionList.cshtml" />
     <Content Include="Views\Shared\_RefundDetailsList.cshtml" />
+    <Content Include="Views\TaxReturn\CompetitorTaxRates.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
