--- a/LitigationSoftware/LSApi/Web.config
+++ b/LitigationSoftware/LSApi/Web.config
@@ -36,8 +36,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <!--<add name="myConnectionString" connectionString="Data Source=DESKTOP-CVEJBH3\MS2014;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <add name="myConnectionString" connectionString="Data Source=localhost;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="myConnectionString" connectionString="Data Source=DESKTOP-65IF9QP\SQL2014;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="myConnectionString" connectionString="Data Source=localhost;Initial Catalog=LitigationApp;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
