--- a/LitigationSoftware/LSWebApp/packages.config
+++ b/LitigationSoftware/LSWebApp/packages.config
@@ -17,9 +17,12 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MicrosoftAjax" version="4.0.20526.0" targetFramework="net461" />
+  <package id="MicrosoftMvcAjax.Mvc5" version="5.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
