Addded code for ABC report

--- a/LitigationSoftware/LS.BL.Interface/LS.BL.Interface.csproj
+++ b/LitigationSoftware/LS.BL.Interface/LS.BL.Interface.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="IITReturnDetailsBL.cs" />
     <Compile Include="IMaster.cs" />
+    <Compile Include="IReportDataBL.cs" />
     <Compile Include="ISignIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
