--- a/LitigationSoftware/LS.DAL.Interface/LS.DAL.Interface.csproj
+++ b/LitigationSoftware/LS.DAL.Interface/LS.DAL.Interface.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IDataAccessBase.cs" />
     <Compile Include="IITReturnDetailsDataAccess.cs" />
     <Compile Include="IMasterDataAccess.cs" />
+    <Compile Include="IReportDataAccess.cs" />
     <Compile Include="ISignInDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
