--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -170,7 +170,9 @@
     <Compile Include="Infrastructure\Menu.cs" />
     <Compile Include="Infrastructure\MenuItem.cs" />
     <Compile Include="Infrastructure\Utilities.cs" />
+    <Compile Include="Models\ABCReportModel.cs" />
     <Compile Include="Models\BusinessLossAnalysisModel.cs" />
+    <Compile Include="Models\ABCReportDataModel.cs" />
     <Compile Include="Models\CompetitorTaxRatesHeaderModel.cs" />
     <Compile Include="Models\CompetitorTaxRatesDataModel.cs" />
     <Compile Include="Models\RefundDetailsListModel.cs" />
