--- a/LitigationSoftware/LS.DAL.Library/LS.DAL.Library.csproj
+++ b/LitigationSoftware/LS.DAL.Library/LS.DAL.Library.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="DataAccessBase.cs" />
     <Compile Include="ITReturnDetailsDataAccess.cs" />
+    <Compile Include="ReportDataAccess.cs" />
     <Compile Include="MasterDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignInDataAccess.cs" />
