--- a/LitigationSoftware/LS.Models/LS.Models.csproj
+++ b/LitigationSoftware/LS.Models/LS.Models.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ABCReport.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="CompetitorMaster.cs" />
     <Compile Include="CompetitorTaxRate.cs" />
