--- a/LitigationSoftware/LS.BL.Library/LS.BL.Library.csproj
+++ b/LitigationSoftware/LS.BL.Library/LS.BL.Library.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompanyDashboardBL.cs" />
     <Compile Include="ITReturnDetailsBL.cs" />
     <Compile Include="Master.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
