--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CompanyDashboardController.cs" />
     <Compile Include="Controllers\ControllerBase.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\TaxReturnController.cs" />
@@ -270,6 +271,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Scripts\companyDashboard.js" />
     <Content Include="Scripts\customDD.js" />
     <Content Include="Scripts\DatePickerReady.js" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
@@ -343,6 +345,7 @@
     <Content Include="Views\Shared\_RefundDetailsList.cshtml" />
     <Content Include="Views\TaxReturn\CompetitorTaxRates.cshtml" />
     <Content Include="Views\TaxReturn\CompetitorTaxRatesDetailsData.cshtml" />
+    <Content Include="Views\CompanyDashboard\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
