--- a/LitigationSoftware/LS.Modules/LS.Modules.csproj
+++ b/LitigationSoftware/LS.Modules/LS.Modules.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompanyDashboardModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignInModule.cs" />
     <Compile Include="TaxIntegrationModule.cs" />
