--- a/LitigationSoftware/LSApi/LSApi.csproj
+++ b/LitigationSoftware/LSApi/LSApi.csproj
@@ -214,7 +214,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\DashboardController.cs" />
+    <Compile Include="Controllers\CompanyDashboardController.cs" />
     <Compile Include="Controllers\LoginAPIController.cs" />
     <Compile Include="Controllers\MasterAPIController.cs" />
     <Compile Include="Controllers\TaxReturnAPIController.cs" />
