--- a/LitigationSoftware/LSWebApp/LSWebApp.csproj
+++ b/LitigationSoftware/LSWebApp/LSWebApp.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Infrastructure\Utilities.cs" />
     <Compile Include="Models\ABCReportModel.cs" />
     <Compile Include="Models\BusinessLossAnalysisModel.cs" />
+    <Compile Include="Models\ChartModel.cs" />
     <Compile Include="Models\ABCReportDataModel.cs" />
     <Compile Include="Models\CompetitorTaxRatesHeaderModel.cs" />
     <Compile Include="Models\CompetitorTaxRatesDataModel.cs" />
@@ -348,6 +349,7 @@
     <Content Include="Views\TaxReturn\CompetitorTaxRates.cshtml" />
     <Content Include="Views\TaxReturn\CompetitorTaxRatesDetailsData.cshtml" />
     <Content Include="Views\CompanyDashboard\Index.cshtml" />
+    <Content Include="Views\CompanyDashboard\Charts.cshtml" />
     <Content Include="Views\TaxReturn\ABCAnalysis.cshtml" />
     <Content Include="Views\TaxReturn\ABCAnalysisData.cshtml" />
   </ItemGroup>
