--- a/LitigationSoftware/LS.Models/LS.Models.csproj
+++ b/LitigationSoftware/LS.Models/LS.Models.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DocumentCategoryMaster.cs" />
     <Compile Include="Implementor.cs" />
     <Compile Include="ITReturnProvisionReport.cs" />
+    <Compile Include="QuarterlyAdvanceTaxReport.cs" />
     <Compile Include="RefundDetails.cs" />
     <Compile Include="SubDocumentCategoryMaster.cs" />
     <Compile Include="MATCreditDetails.cs" />
